2001-05-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* ssl/Makefile.in, ssl/ssl.c, ssl/ssl:sst.[ch], ssl/ssl_sst.[ch]:
	    Changed references from   ssl:sst.[ch]  files to  ssl_sst.[ch]

2001-05-15  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* include/ta.h, scheduler/update.c, transports/libta/diagnostic.c,
	  transports/smtp/getmxrr.c, transports/smtp/smtp.c:
	    Define and use  EX_DEFERALL  exit code, which introduces a new,
	    somewhat differently behaving handling of temporary kind of
	    failures -- intended for smtp transport-agent for DNS lookup
	    failures of some domains, and connection failures.
	    To large extent this behaves as if "retryat +60" were defined,
	    but this will also mark ALL subsequent messages in the thread
	    (via "nextitem" chain) to 1) have been attempted, and 2) with
	    the same message as we initially have.

	* scheduler/mailq.c:
	    The 'mailq -v' did show the ta-work-specification-file
	    size, not message size in 'bytes %ld' printout.. :-(

	    Also:  Have options:  "-c channel -h host"
	    which TOGETHER will let querying of some particularly
	    interesting destination channel/host pair among all that
	    the system may have active.  Requires MAILQ-V2 mode, and
	    '-v' option use (not '-Q'!).

2001-05-10  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* include/libc.h:
	    Copy the 'GETNAMEINFOFLAGTYPE' test code into this
	    file too from  libc/getnameinfo.c.  Bloody Solaris..

2001-05-08  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Makefile.in:
	    Version 2.99.55-patch1

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Reworking (simplifying) DATA phase processing,
	    and quick-retry handling of socket write/read
	    failure induced closes.  There is limit of three
	    attempts on any given host for the delivery before
	    giving up entirely.  (Passing the failure to the
	    scheduler..)

2001-05-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
