@@ -1,7 +1,7 @@
 /*
  *	ZMailer 2.99.53+ Scheduler "mailq2" routines
  *
- *	Copyright Matti Aarnio <mea@nic.funet.fi> 1999
+ *	Copyright Matti Aarnio <mea@nic.funet.fi> 1999-2001
  *
  */
 
